Work on API and persistence
